# ratchet-rust

ratchet/: Cargo.toml
ratchet/assets/: bolt_crate.glb  character_controller2.glb
ratchet/src/: main.rs
ratchet/src/camera/: camera.rs
ratchet/src/player/: mod.rs  player.rs  player_animations.rs  player_movement.rs  player_states.rs
ratchet/src/ui/: gui.rs
ratchet/src/world/: platform.rs
ratchet2/: Cargo.toml
ratchet2/src/: main.rs
ratchet2/src/camera/: camera.rs
ratchet2/src/level/: level.rs
ratchet2/src/player/: player_animation.rs  player_input.rs  player_movement.rs  player_setup.rs  weapons.rs
