[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3


[dependencies]
bevy = "0.12.1"
bevy_editor_pls = "0.6.0"
bevy_third_person_camera = "0.1.7"
bevy_xpbd_3d = "0.3.2"
rand = "0.8.5"
